GNOME Bugzilla – Bug 694783
libtracker-miner: don't crash when first indexing files out of /home
Last modified: 2013-03-08 21:29:06 UTC
Attached patch fixes a crash in tracker-miner-fs reproducible (also with tracker-control -f) when indexing e.g. a file in a subdirectory of /opt.
Created attachment 237493 [details] [review] tracker-miner: don't crash when first indexing files out of /home If tracker_miner_manager_index_file() is called with a path outside of the home directory, we'll end up recursing up to the file system root, to create the parent directory objects. When the tree we're passed is the filesystem root, and the file is exactly equal to it, we should return the tree root immediately, or we'll crash later in the while loop.
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report. This should be in 0.15.3 and 0.14.6. Thanks Cosimo! :)